# productivity

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  repositories.list
.agents/: config.json
.agents/memory/: MEMORY.md  check-ui-launch-agent-process-detection.md  (+19 more)
apps/lab/: lab
apps/server/: README.md  pyproject.toml
apps/server/src/server/: __main__.py  config.py  diff_parser.py  main.py  state.py  watcher.py
apps/server/src/server/routes/: cerebro.py  code_search.py  diff.py  git.py  index.py  log.py  markdown.py  mutation.py  nb_exec.py  notebook.py  project.py  search.py  task.py  term.py  ui.py  ws.py
apps/server/src/server/static/css/: app.css
apps/server/src/server/static/js/: api.js  app.js
apps/server/src/server/static/js/lib/: dom.js  error-report.js
apps/server/src/server/static/js/views/: dashboard.js  markdown.js  notebook.js  project.js  search.js
apps/server/src/server/templates/: index.html  spa.html
apps/server/tests/: conftest.py  test_cerebro_routes.py  test_git_route.py  test_health.py  test_integration_e2e.py  test_logging_infra.py  test_markdown_route.py  test_mutation_routes.py  test_notebook_route.py  test_project_routes.py  test_resource_discipline.py  test_search_route.py  test_static.py  test_term_routes.py  test_term_ws_reliability.py  test_ui_routes.py  test_watcher.py  test_ws.py
apps/trustim-investigation/workbench/server-py/: pyproject.toml
apps/trustim-investigation/workbench/server-py/app/: config.py  main.py
apps/trustim-investigation/workbench/server-py/app/models/: __init__.py  alert.py  automation.py  common.py  investigation.py  node.py  playbook.py  session.py  skill.py
apps/trustim-investigation/workbench/server-py/app/routers/: alerts.py  automations.py  health.py  investigations.py  misc.py  playbooks.py  sessions.py  skills.py
apps/trustim-investigation/workbench/server-py/tests/: conftest.py  test_api.py  test_api_contract.py  test_models.py  test_pydantic_compliance.py
cli/: g  repo.py
core/: README.md  core  pyproject.toml
core/cli/: README.md  lab  pyproject.toml
core/cli/src/lab/: __main__.py  cli.py  index.py  model.py  paths.py  settings.py
core/cli/src/lab/commands/: agents.py  app.py  config.py  index.py  link.py  project.py  ref.py  repo.py  service.py  task.py  workspace.py
core/cli/src/lab/config/: mp-prefixes.json
core/cli/tests/: conftest.py  test_cli_config.py  test_cli_index.py  test_cli_project.py  test_cli_search.py  test_cli_service.py  test_cli_task.py  test_cli_workspace.py  test_index.py  test_model.py  test_paths.py  test_sanity.py  test_search.py  test_storage.py  test_util.py
docs/: DARWIN.md  EXPECTATIONS.md  SERVERS.md  UNIFY-BACKEND.md  agent-switch-prompt.md  framework-migration-changelog.md  productivity-framework-proposal.md  workspace-architecture.md
knowledge/: .knowledge-project.json
scripts/: check-ui.sh  lab-url.sh  push.sh
server/: server.py
(+587 files in other folders)
