[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-server"
version = "0.1.0"
description = "Unified HTTP+WS backend for the productivity monorepo (absorbed lab-backend + gdiff)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "watchdog>=4.0",
    "markdown>=3.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "lab",
    # Reverse proxy for per-project local servers (routes/proxy.py): used
    # to forward HTTP from /api/proxy/<project>/<name>/<path> to a
    # localhost:<port> dev server, with HTML <base href> injection and
    # cookie-name scoping. uvicorn[standard] already pulls `websockets`
    # for the WS side of the proxy.
    "httpx>=0.27",
]

[project.scripts]
lab-server = "server.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default: skip ``@pytest.mark.slow`` (latency budgets, reconnect storms).
# Run them explicitly with ``pytest -m slow``; the Makefile has a
# ``test-all`` target that runs everything.
addopts = "-ra --cov=server --cov-report=term-missing -m 'not slow'"
markers = [
    "slow: latency/load/storm tests. Skipped by default; run with 'pytest -m slow' or 'make test-all'.",
]
