[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab"
version = "0.1.0"
description = "Unified CLI for the productivity monorepo"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
lab = "lab.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=lab --cov-report=term-missing"
