[project]
name = "juniper-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio", "mypy", "types-aiofiles"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
